--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,24 @@ services:
     restart: unless-stopped
     environment:
       INTERVAL: ${INTERVAL:-3600}
-      SERVER_ID: ${SERVER_ID:-None}
+      INFLUXDB_ADMIN_USER: admin
+      INFLUXDB_ADMIN_PASSWORD: admin
+      INFLUXDB_INIT_BUCKET: speedtest
+      INFLUXDB_INIT_ORG: internet-auto-tester
+      SERVER_ID: ${SERVER_ID}
+      INFLUX_TOKEN: ${INFLUX_TOKEN}
 
   db:
     image: influxdb
     container_name: db_influx
     volumes:
       - ../resources/influx/:/var/lib/influxdb
+    ports:
+      - '8083:8083'
+      - '8086:8086'
     environment:
-      INFLUXDB_ADMIN_USER: admin
-      INFLUXDB_ADMIN_PASSWORD: admin
-      INFLUXDB_DB: speedtest
+      DOCKER_INFLUXDB_INIT_MODE: setup
+      DOCKER_INFLUXDB_INIT_USERNAME: admin
+      DOCKER_INFLUXDB_INIT_PASSWORD: adminpassword
+      DOCKER_INFLUXDB_INIT_ORG: internet-auto-tester
+      DOCKER_INFLUXDB_INIT_BUCKET: speedtest
