feat(Grafana): Add grafana with dashboard

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,18 @@
+# Test Config
+
 INTERVAL=
 SERVER_ID=
+
+# Influx Config
+
+# Atention, password must contain at least 8 characters
+DOCKER_INFLUXDB_INIT_PASSWORD=
+DOCKER_INFLUXDB_INIT_USERNAME=
+INFLUXDB_INIT_BUCKET=
+INFLUXDB_INIT_ORG=
+INFLUX_TOKEN=
+
+# Grafana Config
+
+GRAFANA_USERNAME=
+GRAFANA_PASSWORD=
